# Data-Structures-Practice

./: README.md
STL_deque/: CMakeLists.txt
STL_deque/src/: main.cpp
custom_linked_lists/circular_LL/include/: Circular_LL.hpp  Node.hpp
custom_linked_lists/circular_LL/src/: Circular_LL.cpp  Node.cpp  main.cpp
custom_linked_lists/double_LL/include/: Double_LL.hpp  Node.hpp
custom_linked_lists/double_LL/src/: Double_LL.cpp  Node.cpp  main.cpp
custom_linked_lists/single_linked_list1.0/include/: Double_LL.hpp  Node.hpp
custom_linked_lists/single_linked_list1.0/src/: Double_LL.cpp  Node.cpp
custom_linked_lists/single_linked_list2.0/include/: LinkedList.h  Node.h
custom_linked_lists/single_linked_list2.0/src/: LinkedList.cpp  Node.cpp  main.cpp
custom_queue/include/: MyQueue.h
custom_queue/src/: MyQueue.cpp  main.cpp
custom_skiplists/doubleSl/src/: doubly_skiplist.cpp  expected_output_xsmall.csv  test_doubly.yaml
custom_skiplists/quadSl/src/: 100k_employees.csv  quadruply_output.csv  quadruply_skiplist.cpp  test_quadruply.yaml
custom_stack/include/: myStack.hpp
custom_stack/src/: main.cpp  myStack.cpp
custom_trees/Employee_tree/src/: main.cpp  minidataset.csv  tree_op1.csv
custom_trees/custom_tree_final_version/include/: Node.hpp  final_tree.hpp
custom_trees/custom_tree_final_version/src/: Node.cpp  final_tree.cpp  main.cpp
custom_trees/practice_tree_with_notes/include/: Node.hpp  Tree.hpp
custom_trees/practice_tree_with_notes/src/: Node.cpp  Tree.cpp  main.cpp
custom_vector/include/: header.h
custom_vector/src/: main.cpp
(+9 files in other folders)
